# expressly-app

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: build-container.yml  hugging_face-deploy.yml
knowledge/: content_style_mapping.json  format.json  target_audience.json  tone.json
src/expressly_server/: app.py  crew.py  main.py  web_app.py
src/expressly_server/config/: agents.yaml  tasks.yaml
src/expressly_server/routers/: route.py
src/expressly_server/schemas/: schema.py
src/expressly_server/utils/: utils.py
